fixed collection id facet and made it not visible. tryed to prioritize JS to always enable save button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,7 +41,9 @@ body {
 #facet-panel-collapse .blacklight-archivesspace_record_tesim {
 	display: none;
 }
-
+#facet-panel-collapse .blacklight-collection_number_tesim {
+	display: none;
+}
 .work-type {
 	margin-top: 0px;
 }
